# prism

./: Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml
app/: api_service.py  cache.py  confidence.py  dependency_graph.py  git_ops.py  github.py  github_auth.py  llm_service.py  main.py  models.py  redis_client.py  repo_index.py  static_analysis.py  webhook.py  workspace.py
worker/: tasks.py
